environments/gloo-gateway/gateway-api/live/kagent/base/kagent-dashboard-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kagent-dashboard-route
  namespace: kagent
spec:
  hostnames:
  - "kagent.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: kagent
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: kagent-dashboard-route-policies
