environments/gloo-gateway/gateway-api/live/kagent/base/kagent-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kagent-ui-route
  namespace: kagent
spec:
  hostnames:
  - "kagent.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: kagent-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
